--- a/sh.html
+++ b/sh.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shanghai Memory</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="shstyles.css">
 </head>
 
 <body>
@@ -17,11 +17,11 @@
         <img id="shbd" src="images/shnight.jpg">
     </div>
 
-    <div style="display: none;">
+    <div>
         <img id="shcol1" src="images/shiny1.gif">
     </div>
 
-    <div style="display: none;">
+    <div>
         <img id="shcol2" src="images/shiny2.gif">
     </div>
 
