finish children pages

--- a/sh.html
+++ b/sh.html
@@ -17,12 +17,20 @@
         <img id="shbd" src="images/shnight.jpg">
     </div>
 
+    <div style="display: none;">
+        <img id="shbg" src="images/color2.jpg">
+    </div>
+
     <div>
         <img id="shcol1" src="images/shiny1.gif">
     </div>
 
     <div>
-        <img id="shcol2" src="images/shiny2.gif">
+        <img id="shcol2" src="images/waves.gif">
+    </div>
+
+    <div>
+        <img id="shcol3" src="images/light1.gif">
     </div>
 
     <script src="shscripts.js"></script>
