--- a/gz.html
+++ b/gz.html
@@ -21,7 +21,7 @@
         <img id="gzbg" src="images/color.jpg">
     </div>
 
-    <div>
+    <div id="elm">
         <img class="flowers" id="gzcol1" src="images/flower1.gif">
         <img class="flowers" id="gzcol2" src="images/flower2.gif">
         <img class="flowers" id="gzcol3" src="images/flower3.gif">
