--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
 </head>
 
 <body>
+    <div id='space'></div>
 
+    <div id="container">
+        <canvas id="cv1"></canvas>
+        <canvas id="cv2"></canvas>
+        <canvas id="cv3"></canvas>
+    </div>
+
+    <div id="postcards" style="display: none;">
+        <img id='pcbg' src="images/postcard.jpg">
+        <img id='pcup' src="images/pcbg.png">
+        <img id='cdup' src="images/cloudcv.jpg">
+        <img id='fwup' src="images/flwcv.png">
+    </div>
+
+    <script src="three.min.js"></script>
+    <script src="OrbitControls.js"></script>
     <script src="scripts.js"></script>
 </body>
 
