--- a/gz.html
+++ b/gz.html
@@ -51,7 +51,15 @@
         </svg>
     </div>
 
-    <script src="gzscripts.js"></script>
+    <div id="arrdiv">
+        <svg id="arrow">
+            <a href="http://i6.cims.nyu.edu/~zc1151/dotw_final/index.html">
+                <use xlink:href="home.svg#home" />
+            </a>
+        </svg>
+    </div>
+
+    <script src="js/gzscripts.js"></script>
 </body>
 
 </html>
