--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <img id='fwup' src="images/flwcv.png">
     </div>
 
-    <script src="three.min.js"></script>
-    <script src="OrbitControls.js"></script>
-    <script src="scripts.js"></script>
+    <script src="js/three.min.js"></script>
+    <script src="js/OrbitControls.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
