--- a/ny.html
+++ b/ny.html
@@ -29,20 +29,15 @@
         <img id="nycol3" src="images/sky3.jpg">
     </div>
 
-    <!-- <div id="clouddiv">
-        <svg class="cd" id="suncloud">
-            <use xlink:href="cloud.svg#suncloud" />
+    <div id="arrdiv">
+        <svg id="arrow">
+            <a href="http://i6.cims.nyu.edu/~zc1151/dotw_final/index.html">
+                <use xlink:href="home.svg#home" />
+            </a>
         </svg>
-    
-        <svg class="cd" id="cloud">
-            <use xlink:href="cloud.svg#cloud" />
-        </svg>
+    </div>
 
-        <svg class="cd" id="cloud2">
-            <use xlink:href="cloud.svg#cloud2" />
-        </svg>
-    </div> -->
-    <script src="nyscripts.js"></script>
+    <script src="js/nyscripts.js"></script>
 </body>
 
 </html>
