--- a/sh.html
+++ b/sh.html
@@ -33,7 +33,15 @@
         <img id="shcol3" src="images/light1.gif">
     </div>
 
-    <script src="shscripts.js"></script>
+    <div id="arrdiv">
+        <svg id="arrow">
+            <a href="http://i6.cims.nyu.edu/~zc1151/dotw_final/index.html">
+                <use xlink:href="home.svg#home" />
+            </a>
+        </svg>
+    </div>
+
+    <script src="js/shscripts.js"></script>
 </body>
 
 </html>
