--- a/ny.html
+++ b/ny.html
@@ -37,7 +37,7 @@
         </svg>
     </div>
 
-    <script src="js/nyscripts.js"></script>
+    <script src="nyscripts.js"></script>
 </body>
 
 </html>
