--- a/sh.html
+++ b/sh.html
@@ -41,7 +41,7 @@
         </svg>
     </div>
 
-    <script src="js/shscripts.js"></script>
+    <script src="shscripts.js"></script>
 </body>
 
 </html>
