--- a/gz.html
+++ b/gz.html
@@ -59,7 +59,7 @@
         </svg>
     </div>
 
-    <script src="gzscripts.js"></script>
+    <script src="js/gzscripts.js"></script>
 </body>
 
 </html>
